[package]
name = "jetroweb"
version = "0.1.0"
edition = "2021"
authors = ["Milad (Mike) Taghavi <mitghi@gmail.com>"]
description = "Jetro webassembly frontend"
readme = "README.md"
repository = "https://github.com/mitghi/jetroweb"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo = "0.8.0"
yew = { version="0.20", features=["csr"] }
wasm-bindgen = "0.2.67"
serde = "1"
serde_derive = "1"
serde_json = "1"
anyhow = "1"
yew-router = "0.15.0"
jetro = "0.1.0"
web-sys = "0.3.61"
gloo-console = "0.2.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.17"
envconfig = "0.10.0"
actix-web-static-files = "4.0"
static-files = "0.2.1"

[build-dependencies]
static-files = "0.2.1"
